--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "email": "will@fullscreen.io"
   }],
   "require": {
-    "silverstripe/framework": "^4"
+    "silverstripe/framework": "^4",
+    "masterminds/html5": "^2.3"
   },
   "require-dev": {
       "phpunit/phpunit": "^5.7",
